--- a/Forms/MainWindow.xaml
+++ b/Forms/MainWindow.xaml
@@ -40,7 +40,8 @@
 		
 	</Window.Resources>
 	<Window.InputBindings>
-		<KeyBinding Key="F10" Command="{Binding ExecutionControl.DebugStepCommand}" />
+		<KeyBinding Key="F5" Command="{Binding ExecutionControl.DebugRunCommand}" />
+		<KeyBinding Key="F10" Command="{Binding ExecutionControl.DebugStepIntoCommand}" />
 	</Window.InputBindings>
 
 	<Grid Background="{DynamicResource Background}">
@@ -87,7 +88,8 @@
 		</Border>
 
 		<StackPanel Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2"  Orientation="Horizontal">
-			<Button Width="36" Height="36" Margin="2" ToolTip="Run">
+			
+			<Button Width="36" Height="36" Margin="2" ToolTip="Run" Command="{Binding ExecutionControl.DebugRunCommand}">
 				<Image Margin="2">
 					<Image.Source>
 						<DrawingImage>
@@ -107,7 +109,7 @@
 				</Image>
 			</Button>
 
-			<Button Width="36" Height="36" Margin="2" ToolTip="Stop">
+			<Button Width="36" Height="36" Margin="2" ToolTip="Stop" Visibility="Collapsed">
 				<Image Margin="2">
 					<Image.Source>
 						<DrawingImage>
@@ -126,8 +128,8 @@
 					</Image.Source>
 				</Image>
 			</Button>
-			
-			<Button Width="36" Height="36" Margin="2" ToolTip="Pause">
+
+			<Button Width="36" Height="36" Margin="2" ToolTip="Pause" Command="{Binding ExecutionControl.DebugPauseCommand}">
 				<Image Margin="2">
 					<Image.Source>
 						<DrawingImage>
@@ -168,7 +170,7 @@
 				</Image>
 			</Button>		
 			
-			<Button Width="36" Height="36" Margin="2" ToolTip="Step Into">
+			<Button Width="36" Height="36" Margin="2" ToolTip="Step Into" Command="{Binding ExecutionControl.DebugStepIntoCommand}">
 				<Image Margin="2">
 					<Image.Source>
 						<DrawingImage>
@@ -222,7 +224,7 @@
 						<DrawingImage>
 							<DrawingImage.Drawing>
 								<DrawingGroup xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:svg="http://sharpvectors.codeplex.com/runtime/">
-									<DrawingGroup x:Name="DrawingLayer">
+									<DrawingGroup>
 										<DrawingGroup.ClipGeometry>
 											<RectangleGeometry Rect="0,0,16,16" />
 										</DrawingGroup.ClipGeometry>
@@ -244,7 +246,7 @@
 				</Image>
 			</Button>
 
-			<Button Width="36" Height="36" Margin="2" ToolTip="Reset">
+			<Button Width="36" Height="36" Margin="15,2,2,2" ToolTip="Reset" Command="{Binding ExecutionControl.DebugResetCommand}">
 				<Image Margin="4" >
 					<Image.Source>
 						<DrawingImage>
