--- a/Skins/DarkSkin/MenuStyles.xaml
+++ b/Skins/DarkSkin/MenuStyles.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+										xmlns:c="clr-namespace:CustomControls;assembly=CustomControls">
 	<!-- Menu style -->
 	<Style x:Key="{x:Type Menu}" TargetType="Menu">
 		<Setter Property="Background" Value="{DynamicResource LightBackground}"/>
@@ -16,7 +17,7 @@
 			</Setter.Value>
 		</Setter>
 	</Style>
-	
+
 	<!-- Menuitem style -->
 	<Style x:Key="{x:Type MenuItem}" TargetType="MenuItem">
 		<Setter Property="HorizontalContentAlignment" Value="Right" />
@@ -35,8 +36,15 @@
 								<ColumnDefinition Width="Auto" SharedSizeGroup="MenuItemIGTColumnGroup"/>
 								<ColumnDefinition x:Name="Col3" Width="14"/>
 							</Grid.ColumnDefinitions>
-							<ContentPresenter Grid.Column="0" x:Name="Icon" VerticalAlignment="Center" 
-                                                      ContentSource="Icon"/>
+							<ContentPresenter Grid.Column="0" x:Name="Icon" VerticalAlignment="Center" ContentSource="Icon" />
+							<Path x:Name="CheckBullet"
+                      Grid.Column="0"
+                      Stroke="{DynamicResource Foreground}"
+                      StrokeThickness="2"
+                      Stretch="Uniform"
+                      Visibility="Collapsed"
+                      HorizontalAlignment="Center" VerticalAlignment="Center" Data="F1 M 0.468732,4.66838L 3.03345,7.95443L 7.28127,0.420569"/>
+
 							<ContentPresenter Grid.Column="1" Margin="{TemplateBinding Padding}" 
                                                       x:Name="HeaderHost" RecognizesAccessKey="True" 
                                                       ContentSource="Header" VerticalAlignment="Center" />
@@ -73,7 +81,7 @@
 							</Popup>
 						</Grid>
 					</Border>
-			
+
 					<ControlTemplate.Triggers>
 						<Trigger Property="Role" Value="TopLevelHeader">
 							<Setter Property="Padding" Value="6,0,6,2"/>
@@ -154,6 +162,14 @@
 						<Trigger Property="Icon" Value="{x:Null}">
 							<Setter TargetName="Icon" Property="Visibility" Value="Collapsed"/>
 						</Trigger>
+						<MultiTrigger>
+							<MultiTrigger.Conditions>
+								<Condition Property="IsCheckable" Value="true"/>
+								<Condition Property="IsChecked" Value="true"/>
+							</MultiTrigger.Conditions>
+							<Setter TargetName="CheckBullet" Property="Visibility" Value="Visible"/>
+							<Setter TargetName="Icon" Property="Visibility" Value="Collapsed"/>
+						</MultiTrigger>
 						<Trigger Property="IsEnabled" Value="False">
 							<Setter Property="Foreground" Value="{DynamicResource MenuDisabledForeground}"/>
 						</Trigger>
@@ -163,4 +179,154 @@
 		</Setter>
 	</Style>
 
+	<!-- RadioMenuitem style -->
+	<Style x:Key="RadioMenuItem" TargetType="{x:Type c:RadioMenuItem}" >
+		<Setter Property="HorizontalContentAlignment" Value="Right" />
+		<Setter Property="VerticalContentAlignment" Value="Center" />
+		<Setter Property="Foreground" Value="{DynamicResource Foreground}"/>
+		<Setter Property="Template">
+			<Setter.Value>
+				<ControlTemplate TargetType="{x:Type MenuItem}">
+					<!--Border 1-->
+					<Border x:Name="Border" Background="Transparent" BorderBrush="Transparent" 
+                                    BorderThickness="1" SnapsToDevicePixels="False">
+						<Grid x:Name="Grid">
+							<Grid.ColumnDefinitions>
+								<ColumnDefinition x:Name="Col0" MinWidth="17" Width="Auto" SharedSizeGroup="MenuItemIconColumnGroup"/>
+								<ColumnDefinition Width="Auto" SharedSizeGroup="MenuTextColumnGroup"/>
+								<ColumnDefinition Width="Auto" SharedSizeGroup="MenuItemIGTColumnGroup"/>
+								<ColumnDefinition x:Name="Col3" Width="14"/>
+							</Grid.ColumnDefinitions>
+							<Path x:Name="CheckBullet"
+                      Grid.Column="0"
+                      Fill="{DynamicResource Foreground}"
+                      Visibility="Hidden"
+										Width="6"
+										Height="6"
+										Margin="11,2,0,0"
+                      VerticalAlignment="Center" Data="M0,3 A 3,3 0 1 0 6,3 A 3,3 0 1 0 0,3"/>
+
+							<ContentPresenter Grid.Column="1" Margin="{TemplateBinding Padding}" 
+                                                      x:Name="HeaderHost" RecognizesAccessKey="True" 
+                                                      ContentSource="Header" VerticalAlignment="Center" />
+							<ContentPresenter Grid.Column="2" Margin="8,1,8,1" x:Name="IGTHost" 
+                                                      ContentSource="InputGestureText" VerticalAlignment="Center"/>
+							<Grid Grid.Column="3" Margin="4,0,6,0" x:Name="ArrowPanel" VerticalAlignment="Center">
+								<Path x:Name="ArrowPanelPath" HorizontalAlignment="Right" VerticalAlignment="Center" 
+                                              Fill="{TemplateBinding Foreground}" Data="M0,0 L0,8 L4,4 z"/>
+							</Grid>
+							<Popup IsOpen="{Binding Path=IsSubmenuOpen, RelativeSource={RelativeSource TemplatedParent}}" 
+                                           Placement="Right" HorizontalOffset="-1" x:Name="SubMenuPopup" Focusable="false"
+                                           PopupAnimation="{DynamicResource {x:Static SystemParameters.MenuPopupAnimationKey}}"
+                                           AllowsTransparency="True">
+								<Grid Margin="0,0,5,5">
+									<!--Border 2-->
+									<Border x:Name="SubMenuBorder" 
+                                                    BorderBrush="{DynamicResource MenuSeparatorBorderBrush}"
+                                                    BorderThickness="1" Background="{DynamicResource SubmenuItemBackground}" 
+                                                    SnapsToDevicePixels="True">
+										<Grid x:Name="SubMenu" Grid.IsSharedSizeScope="True" Margin="2">
+											<StackPanel IsItemsHost="True" 
+                                                                KeyboardNavigation.DirectionalNavigation="Cycle"/>
+										</Grid>
+										<Border.Effect>
+											<DropShadowEffect ShadowDepth="2" Color="Black"/>
+										</Border.Effect>
+									</Border>
+									<!--Border 3-->
+									<Border Margin="1,0,0,0" x:Name="TransitionBorder" Width="0" Height="2" 
+                                                    VerticalAlignment="Top" HorizontalAlignment="Left" 
+                                                    Background="{DynamicResource SubmenuItemBackground}" SnapsToDevicePixels="False"
+                                                    BorderThickness="1" BorderBrush="{DynamicResource SubmenuItemBackground}"/>
+								</Grid>
+							</Popup>
+						</Grid>
+					</Border>
+
+					<ControlTemplate.Triggers>
+						<Trigger Property="Role" Value="TopLevelHeader">
+							<Setter Property="Padding" Value="6,0,6,2"/>
+							<Setter TargetName="SubMenuPopup" Property="Placement" Value="Bottom"/>
+							<Setter TargetName="Col0" Property="MinWidth" Value="0"/>
+							<Setter TargetName="Col3" Property="Width" Value="Auto"/>
+							<Setter TargetName="IGTHost" Property="Visibility" Value="Collapsed" />
+							<Setter TargetName="ArrowPanel" Property="Visibility" Value="Collapsed"/>
+							<Setter TargetName="SubMenuBorder" Property="BorderThickness" Value="1,1,1,1"/>
+							<Setter TargetName="SubMenu" Property="Margin" Value="2,3,2,2"/>
+							<Setter TargetName="TransitionBorder" Property="Width" Value="{Binding ActualWidth, ElementName=Grid}"/>
+						</Trigger>
+						<Trigger Property="Role" Value="TopLevelItem">
+							<Setter Property="Padding" Value="6,0,6,2"/>
+							<Setter TargetName="Col0" Property="MinWidth" Value="0"/>
+							<Setter TargetName="Col3" Property="Width" Value="Auto"/>
+							<Setter TargetName="IGTHost" Property="Visibility" Value="Collapsed"/>
+							<Setter TargetName="ArrowPanel" Property="Visibility" Value="Collapsed"/>
+						</Trigger>
+						<Trigger Property="Role" Value="SubmenuHeader">
+							<Setter Property="DockPanel.Dock" Value="Top"/>
+							<Setter Property="Padding" Value="10,3,0,3"/>
+							<Setter TargetName="Border" Property="MinHeight" Value="22"/>
+							<Setter TargetName="Border" Property="Background" Value="{DynamicResource SubmenuItemBackground}"/>
+						</Trigger>
+						<Trigger Property="Role" Value="SubmenuItem">
+							<Setter Property="DockPanel.Dock" Value="Top"/>
+							<Setter Property="Padding" Value="10,3,0,3"/>
+							<Setter TargetName="Border" Property="MinHeight" Value="22"/>
+							<Setter TargetName="ArrowPanel" Property="Visibility" Value="Collapsed"/>
+							<Setter TargetName="Border" Property="Background" Value="{DynamicResource SubmenuItemBackground}"/>
+						</Trigger>
+						<MultiTrigger>
+							<MultiTrigger.Conditions>
+								<Condition Property="IsHighlighted" Value="true"/>
+								<Condition Property="Role" Value="TopLevelHeader"/>
+							</MultiTrigger.Conditions>
+							<Setter TargetName="Border" Property="Background" Value="{DynamicResource MenuItemHighlightedBackground}"/>
+						</MultiTrigger>
+						<MultiTrigger>
+							<MultiTrigger.Conditions>
+								<Condition Property="IsHighlighted" Value="true"/>
+								<Condition Property="Role" Value="TopLevelItem"/>
+							</MultiTrigger.Conditions>
+							<Setter TargetName="Border" Property="Background" Value="{DynamicResource MenuItemHighlightedBackground}"/>
+						</MultiTrigger>
+						<MultiTrigger>
+							<MultiTrigger.Conditions>
+								<Condition Property="IsHighlighted" Value="true"/>
+								<Condition Property="Role" Value="SubmenuHeader"/>
+							</MultiTrigger.Conditions>
+							<Setter TargetName="Border" Property="Background" Value="{DynamicResource SubmenuItemBackgroundHighlighted}"/>
+						</MultiTrigger>
+						<MultiTrigger>
+							<MultiTrigger.Conditions>
+								<Condition Property="IsHighlighted" Value="true"/>
+								<Condition Property="Role" Value="SubmenuItem"/>
+							</MultiTrigger.Conditions>
+							<Setter TargetName="Border" Property="Background" Value="{DynamicResource SubmenuItemBackgroundHighlighted}"/>
+						</MultiTrigger>
+						<MultiTrigger>
+							<MultiTrigger.Conditions>
+								<Condition Property="IsSubmenuOpen" Value="true"/>
+								<Condition Property="Role" Value="TopLevelHeader"/>
+							</MultiTrigger.Conditions>
+							<Setter TargetName="Border" Property="Background" Value="{DynamicResource SubmenuItemBackground}"/>
+							<Setter TargetName="Border" Property="BorderBrush" Value="{DynamicResource MenuSeparatorBorderBrush}"/>
+							<Setter TargetName="Border" Property="BorderThickness" Value="1,1,1,0"/>
+						</MultiTrigger>
+						<Trigger Property="IsSubmenuOpen" Value="true">
+							<Setter TargetName="ArrowPanelPath" Property="Fill" Value="{DynamicResource BackgroundSelected}"/>
+						</Trigger>
+						<Trigger Property="IsSuspendingPopupAnimation" Value="true">
+							<Setter TargetName="SubMenuPopup" Property="PopupAnimation" Value="None"/>
+						</Trigger>
+						<Trigger Property="IsChecked" Value="true">
+							<Setter TargetName="CheckBullet" Property="Visibility" Value="Visible"/>
+						</Trigger>
+						<Trigger Property="IsEnabled" Value="False">
+							<Setter Property="Foreground" Value="{DynamicResource MenuDisabledForeground}"/>
+						</Trigger>
+					</ControlTemplate.Triggers>
+				</ControlTemplate>
+			</Setter.Value>
+		</Setter>
+	</Style>
 </ResourceDictionary>
