--- a/Skins/DarkSkin/ProgressBar.xaml
+++ b/Skins/DarkSkin/ProgressBar.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-										xmlns:c="clr-namespace:CygnusControls;assembly=CygnusControls">
+										xmlns:c="clr-namespace:CustomControls;assembly=CustomControls">
 
     <Style x:Key="StandardProgressBar" TargetType="{x:Type ProgressBar}">
         <Setter Property="Foreground" Value="{DynamicResource ProgressBarForeground}" />
