--- a/Skins/DarkSkin/CheckBoxStyle.xaml
+++ b/Skins/DarkSkin/CheckBoxStyle.xaml
@@ -31,7 +31,7 @@
 		<Setter Property="Template">
 			<Setter.Value>
 				<ControlTemplate TargetType="CheckBox">
-					<BulletDecorator Background="Transparent">
+					<BulletDecorator Background="Transparent" VerticalAlignment="Center">
 						<BulletDecorator.Bullet>
 							<Border x:Name="Border"  
                               Width="16" 
@@ -48,7 +48,6 @@
 							</Border>
 						</BulletDecorator.Bullet>
 						<ContentPresenter Margin="4,0,0,0"
-                            VerticalAlignment="Center"
                             HorizontalAlignment="Left"
                             RecognizesAccessKey="True"/>
 					</BulletDecorator>
