--- a/CustomControls/AutoCompletetextBox/Themes/Generic.xaml
+++ b/CustomControls/AutoCompletetextBox/Themes/Generic.xaml
@@ -1,10 +1,4 @@
-﻿<!-- =========================================================================
-// Generic template for AutoCompleteTextBox
-//
-// Copyright (c) Bay Zoltán Nonprofit Ltd. for Applied Research
-//======================================================================== -->
-  
-  <ResourceDictionary
+﻿  <ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:CustomControls">
