--- a/Forms/MainWindow.xaml
+++ b/Forms/MainWindow.xaml
@@ -8,7 +8,7 @@
 				xmlns:effects="clr-namespace:YATE.Effects"
         mc:Ignorable="d"
         Title="YATE" Height="800" Width="1250"
-				Style="{DynamicResource WindowStyle}" Closing="Window_Closing" PreviewKeyDown="Window_KeyDown" PreviewKeyUp="Window_KeyUp">
+				Style="{DynamicResource WindowStyle}" Loaded="Window_Loaded" Closing="Window_Closing" PreviewKeyDown="Window_KeyDown" PreviewKeyUp="Window_KeyUp">
 	<Window.Resources>
 		<Style TargetType="TextBlock" x:Key="LabelStyle">
 			<Setter Property="Foreground" Value="OrangeRed"/>
